@startuml PresentationClasses

' ===== CLASES EXISTENTES (sin modificar) =====

class UserController <<controller>> #PaleGreen;line:Black;text:Black {
}

class LoginView <<view>> #SkyBlue;line:Black;text:Black {
}

class AdminPanelView <<view>> #SkyBlue;line:Black;text:Black {
}

class LoginController <<controller>> #PaleGreen;line:Black;text:Black {
}

class AdminPanelController <<controller>> #PaleGreen;line:Black;text:Black {
}

' from domain layer
abstract User<Domain Layer> <<abstract>> #Pink;line:Black;line.dotted;text:gray {
  # id: long
  # username: String
  # fullname: String
  # password: String
  # role: Role
  # state: State
}

' from application layer
interface IUserService<Application Layer> <<interface>> #aliceblue;line:blue;text:blue {}

' from domain layer
enum Role<Domain Layer> <<enumeration>> #LightBlue;line:Black;text:Black {
  Administrator
  Patient
  ClinicalStaff
  AppointmentManager
}

UserController ..> User
UserController -> IUserService
LoginView <..> AdminPanelView
LoginController ..> Role
AdminPanelController "1..1" -> "1..1" AdminPanelView : use
LoginController "1..1" -> "1..1" LoginView : use
LoginController "1..1" -> "1..1" IUserService : use

' ===== NUEVAS CLASES — Gestión de Usuarios (E1-HU1 a E1-HU4) =====

class RegisterUserView <<view>> #SkyBlue;line:Black;text:Black {
  ' E1-HU1: Formulario de registro
  -cmbRole: JComboBox
  -txtUsername: JTextField
  -txtFullname: JTextField
  -txtPassword: JPasswordField
  -cmbState: JComboBox
  -dynamicPanel: JPanel
  -panelPatientFields: JPanel
  -panelClinicalFields: JPanel
  -btnSave: JButton
  -btnCancel: JButton
  +getUsername(): String
  +getFullname(): String
  +getPassword(): String
  +getSelectedRole(): String
  +getSelectedState(): String
  +getCitizenCard(): String
  +getPhoneNumber(): String
  +getSelectedProfession(): String
  +getSelectedSpecialty(): String
  +addSaveListener(ActionListener): void
  +addCancelListener(ActionListener): void
}

class UpdateUserView <<view>> #SkyBlue;line:Black;text:Black {
  ' E1-HU2: Formulario de actualización (pre-populado)
  -userId: long
  -cmbRole: JComboBox
  -txtUsername: JTextField
  -txtFullname: JTextField
  -txtPassword: JPasswordField
  -cmbState: JComboBox
  -dynamicPanel: JPanel
  -panelPatientFields: JPanel
  -panelClinicalFields: JPanel
  -btnSave: JButton
  -btnCancel: JButton
  +UpdateUserView(ClsUser user): void
  +getUserId(): long
  +getUsername(): String
  +getFullname(): String
  +getPassword(): String
  +getSelectedRole(): String
  +getSelectedState(): String
  +getCitizenCard(): String
  +getPhoneNumber(): String
  +getSelectedProfession(): String
  +getSelectedSpecialty(): String
  +addSaveListener(ActionListener): void
  +addCancelListener(ActionListener): void
}

class MainFrame <<view>> #SkyBlue;line:Black;text:Black {
  ' E1-HU1/HU2/HU3/HU4: Panel principal de gestión de usuarios
  -userController: UserController
  -table: JTable
  -tableModel: ClinicTableModel
  -formPanel: ClinicFormPanel
  +MainFrame(UserController userController): void
  -loadUsers(): void
  -onRegister(): void
  -onUpdate(): void
  -onDeactivate(): void
}

class ClinicTableModel <<view>> #SkyBlue;line:Black;text:Black {
  ' E1-HU3: Muestra login, nombre, rol y estado
  -users: List<ClsUser>
  +ClinicTableModel(List<ClsUser> users): void
  +getRowCount(): int
  +getColumnCount(): int
  +getValueAt(int row, int col): Object
  +getColumnName(int col): String
  +getUserAt(int row): ClsUser
}

class ClinicFormPanel <<view>> #SkyBlue;line:Black;text:Black {
  ' Panel auxiliar de formulario reutilizable
}

' Relaciones nuevas
AdminPanelController "1..1" -> "1..1" UserController : delegates
AdminPanelController ..> MainFrame : opens

MainFrame "1..1" -> "1..1" UserController : use
MainFrame "1..1" -> "1..1" ClinicTableModel : use
MainFrame ..> RegisterUserView : opens
MainFrame ..> UpdateUserView : opens

ClinicTableModel ..> User

RegisterUserView ..> User
RegisterUserView ..> Role
UpdateUserView ..> User
UpdateUserView ..> Role

@enduml
